@@ -1,8 +1,8 @@
 Package: DelayedMatrixStats
 Type: Package
 Title: Functions that Apply to Rows and Columns of 'DelayedMatrix' Objects
-Version: 1.25.1
-Date: 2023-11-09
+Version: 1.25.2
+Date: 2024-04-11
 Authors@R: c(person("Peter", "Hickey", role = c("aut", "cre"),
     email = "peter.hickey@gmail.com", comment = c(ORCID = "0000-0002-8153-6258")),
     person("Hervé", "Pagès", role = "ctb", email = "hpages.on.github@gmail.com"),
