@@ -26,13 +26,12 @@
   }
 
   # Check and subset 'center' (must be either NULL, or a numeric vector of
-  # length 1 or 'nrow(x)')
+  # length 'nrow(x)')
   if (!is.null(center)) {
     stopifnot(is.numeric(center))
-    if (length(center) != 1L) {
-      stopifnot(length(center) == nrow(x))
-      if (!is.null(rows))
-        center <- center[rows]
+    stopifnot(length(center) == nrow(x))
+    if (!is.null(rows)) {
+      center <- center[rows]
     }
   }
 
